<resources>
    <string name="app_name">FTechnology</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Yes No-->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--Toast Msg -->
    <string name="succes_signup">Success!</string>
    <string name="welcome">Welcome!</string>

    <!-- OnBoarding Screen Msg And Text-->
    <string name="quality_title">Product Quality</string>
    <string name="quality_product_msg">At FTechnology, we take immense pride in the quality of our products. Each item is crafted with precision and undergoes thorough quality assurance checks to meet and exceed industry standards. We\'re committed to delivering a premium experience, ensuring that every purchase reflects our dedication to excellence.</string>

    <string name="secure_title">Security Measures</string>
    <string name="secure_msg">Your trust is our utmost priority. Rest assured, we employ advanced security measures to protect your personal information. Our robust encryption technologies and stringent data protection protocols guarantee a secure shopping environment. Your privacy matters, and we\'re here to ensure it remains intact throughout your journey with us.</string>

    <string name="delivery_title">Prompt and Reliable Delivery</string>
    <string name="delivery_msg">We understand the importance of your time, and our commitment to prompt delivery reflects that understanding. Our logistics team works tirelessly to ensure your orders are processed swiftly and delivered to your doorstep in the shortest possible time. Experience the convenience of reliable, on-time delivery with us.</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>

    <!-- Sign In - Sign Up Screen -->
    <string name="sig_in">Sign In</string>
    <string name="enter_email">Enter E-Mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="register_yet">Have you registered yet?</string>
    <string name="register_now">Register Now!</string>
    <string name="sig_up">Sign Up</string>

    <!-- Sign In - Sign Up Error -->
    <string name="fill_in_the_blanks">Fill in the blanks</string>
    <string name="password_insufficient">Create a password with at least 6 characters</string>
    <string name="password_is_not_the_same">Password is not the same</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="mail_is_in_use">Email already in use</string>
    <string name="check_information">Please check information</string>
    <string name="unknown_exception">Unknown Exception</string>

    <!-- Page Name -->
    <string name="product">Products</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>

    <!-- No fav Product Msg -->
    <string name="no_fav_msg">You haven\'t added your favorite product yet!</string>

    <!-- Is empty cart Msg -->
    <string name="empty_cart_msg">No products in your cart yet!</string>

    <!-- Settings Page-->
    <string name="general">General</string>
    <string name="user">User</string>
    <string name="log_out">Log Out</string>
    <string name="change_theme">Change theme</string>
    <string name="change_language">Language</string>
    <string name="exit_question">Do you want to log out?</string>
    <string name="success_exit">Exit has been made!</string>
    <string name="failed_exit">Exit has been not made!</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="lang_pref">Select your preferred language</string>

    <!-- Error Msg-->
    <string name="load_error">An Error Occurred Try Again!</string>

    <!-- Button Txt-->
    <string name="add_to_card">Add To Cart</string>

</resources>