<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">


        <ListPreference
            app:entries="@array/language_options"
            app:entryValues="@array/language_codes"
            app:key="language_list"
            app:summary="@string/lang_pref"
            app:title="@string/change_language"
            android:icon="@drawable/ic_language"
            app:defaultValue="en"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="theme_switch"
            app:title="@string/dark_mode"
            app:summary="@string/enable_dark_mode"
            android:icon="@drawable/ic_theme"
            app:defaultValue="false" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/user">
        <Preference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:key="logout_click"
            android:singleLine="true"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </PreferenceCategory>

</PreferenceScreen>